--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -317,7 +317,7 @@
                </font>
               </property>
               <property name="text">
-               <string>待定</string>
+               <string>手工发单</string>
               </property>
              </widget>
             </item>
