完成查询持仓 显示持仓

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -293,7 +293,7 @@
                </font>
               </property>
               <property name="text">
-               <string>待定</string>
+               <string>检查持仓</string>
               </property>
              </widget>
             </item>
